updated blog design

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,6 +15,10 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
+// Google Fonts
+@import url(http://fonts.googleapis.com/css?family=Raleway);
+
+$raleway: Raleway;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
