updated theme to match new site

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,7 +10,7 @@ $blue: #4183C4;
 $black: #000;
 $darkerGray: #222;
 $darkGray: #333;
-$gray: #666;
+$gray: #777;
 $lightGray: #eee;
 $white: #fff;
 
@@ -22,6 +22,7 @@ $raleway: Raleway;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$sansserif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
